output/tmp/y.output
Terminals unused in grammar

   '!'


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: $@1 function_list

    3 function_list: function_list function
    4              | function

    5 $@2: /* empty */

    6 function: T_Identifier T_Explain dtype $@2 '(' param_list ')' compound_stmt

    7 dtype: T_Int
    8      | T_Void

    9 param_list: param_list ',' param
   10           | param
   11           | /* empty */

   12 param: T_Int T_Identifier

   13 compound_stmt: '{' stmt_list '}'

   14 stmt_list: stmt_list stmt
   15          | /* empty */

   16 if_prefix: T_If '(' expr ')'

   17 while_label: T_While

   18 var_list: var_list ',' T_Identifier
   19         | T_Identifier

   20 stmt: T_Return expr ';'
   21     | T_Int var_list ';'
   22     | T_Identifier '=' expr ';'
   23     | T_Identifier '(' arg_list ')' ';'
   24     | compound_stmt
   25     | if_prefix stmt

   26 @3: /* empty */

   27 stmt: if_prefix stmt T_Else @3 stmt

   28 @4: /* empty */

   29 stmt: while_label '(' expr ')' @4 stmt
   30     | T_Break ';'
   31     | T_Continue ';'
   32     | T_outputInt '(' expr ')' ';'

   33 arg_list: arg_list ',' expr
   34         | expr
   35         | /* empty */

   36 expr: T_IntConstant
   37     | T_Identifier
   38     | T_Identifier '(' arg_list ')'
   39     | T_inputInt '(' ')'
   40     | expr '+' expr
   41     | expr '-' expr
   42     | expr '*' expr
   43     | expr '/' expr
   44     | expr T_Eq expr
   45     | expr T_Ne expr
   46     | expr '<' expr
   47     | expr '>' expr
   48     | expr T_Le expr
   49     | expr T_Ge expr
   50     | expr T_Or expr
   51     | expr T_And expr
   52     | expr T_Power expr
   53     | '(' expr ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'(' (40) 6 16 23 29 32 38 39 53
')' (41) 6 16 23 29 32 38 39 53
'*' (42) 42
'+' (43) 40
',' (44) 9 18 33
'-' (45) 41
'/' (47) 43
';' (59) 20 21 22 23 30 31 32
'<' (60) 46
'=' (61) 22
'>' (62) 47
'{' (123) 13
'}' (125) 13
error (256)
T_IntConstant (258) 36
T_Identifier (259) 6 12 18 19 22 23 37 38
T_Void (260) 8
T_Int (261) 7 12 21
T_While (262) 17
T_If (263) 16
T_Else (264) 27
T_Return (265) 20
T_Explain (266) 6
T_Break (267) 30
T_Continue (268) 31
T_Le (269) 48
T_Ge (270) 49
T_Eq (271) 44
T_Ne (272) 45
T_And (273) 51
T_Or (274) 50
T_inputInt (275) 39
T_outputInt (276) 32
T_Power (277) 52
LOWER_THAN_ELSE (278)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 2, on right: 0
$@1 (40)
    on left: 1, on right: 2
function_list (41)
    on left: 3 4, on right: 2 3
function (42)
    on left: 6, on right: 3 4
$@2 (43)
    on left: 5, on right: 6
dtype (44)
    on left: 7 8, on right: 6
param_list (45)
    on left: 9 10 11, on right: 6 9
param (46)
    on left: 12, on right: 9 10
compound_stmt (47)
    on left: 13, on right: 6 24
stmt_list (48)
    on left: 14 15, on right: 13 14
if_prefix (49)
    on left: 16, on right: 25 27
while_label (50)
    on left: 17, on right: 29
var_list (51)
    on left: 18 19, on right: 18 21
stmt (52)
    on left: 20 21 22 23 24 25 27 29 30 31 32, on right: 14 25 27 29
@3 (53)
    on left: 26, on right: 27
@4 (54)
    on left: 28, on right: 29
arg_list (55)
    on left: 33 34 35, on right: 23 33 38
expr (56)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53,
    on right: 16 20 22 29 32 33 34 40 41 42 43 44 45 46 47 48 49 50
    51 52 53


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 . function_list

    T_Identifier  shift, and go to state 4

    function_list  go to state 5
    function       go to state 6


State 3

    0 $accept: program $end .

    $default  accept


State 4

    6 function: T_Identifier . T_Explain dtype $@2 '(' param_list ')' compound_stmt

    T_Explain  shift, and go to state 7


State 5

    2 program: $@1 function_list .
    3 function_list: function_list . function

    T_Identifier  shift, and go to state 4

    $default  reduce using rule 2 (program)

    function  go to state 8


State 6

    4 function_list: function .

    $default  reduce using rule 4 (function_list)


State 7

    6 function: T_Identifier T_Explain . dtype $@2 '(' param_list ')' compound_stmt

    T_Void  shift, and go to state 9
    T_Int   shift, and go to state 10

    dtype  go to state 11


State 8

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 9

    8 dtype: T_Void .

    $default  reduce using rule 8 (dtype)


State 10

    7 dtype: T_Int .

    $default  reduce using rule 7 (dtype)


State 11

    6 function: T_Identifier T_Explain dtype . $@2 '(' param_list ')' compound_stmt

    $default  reduce using rule 5 ($@2)

    $@2  go to state 12


State 12

    6 function: T_Identifier T_Explain dtype $@2 . '(' param_list ')' compound_stmt

    '('  shift, and go to state 13


State 13

    6 function: T_Identifier T_Explain dtype $@2 '(' . param_list ')' compound_stmt

    T_Int  shift, and go to state 14

    $default  reduce using rule 11 (param_list)

    param_list  go to state 15
    param       go to state 16


State 14

   12 param: T_Int . T_Identifier

    T_Identifier  shift, and go to state 17


State 15

    6 function: T_Identifier T_Explain dtype $@2 '(' param_list . ')' compound_stmt
    9 param_list: param_list . ',' param

    ')'  shift, and go to state 18
    ','  shift, and go to state 19


State 16

   10 param_list: param .

    $default  reduce using rule 10 (param_list)


State 17

   12 param: T_Int T_Identifier .

    $default  reduce using rule 12 (param)


State 18

    6 function: T_Identifier T_Explain dtype $@2 '(' param_list ')' . compound_stmt

    '{'  shift, and go to state 20

    compound_stmt  go to state 21


State 19

    9 param_list: param_list ',' . param

    T_Int  shift, and go to state 14

    param  go to state 22


State 20

   13 compound_stmt: '{' . stmt_list '}'

    $default  reduce using rule 15 (stmt_list)

    stmt_list  go to state 23


State 21

    6 function: T_Identifier T_Explain dtype $@2 '(' param_list ')' compound_stmt .

    $default  reduce using rule 6 (function)


State 22

    9 param_list: param_list ',' param .

    $default  reduce using rule 9 (param_list)


State 23

   13 compound_stmt: '{' stmt_list . '}'
   14 stmt_list: stmt_list . stmt

    T_Identifier  shift, and go to state 24
    T_Int         shift, and go to state 25
    T_While       shift, and go to state 26
    T_If          shift, and go to state 27
    T_Return      shift, and go to state 28
    T_Break       shift, and go to state 29
    T_Continue    shift, and go to state 30
    T_outputInt   shift, and go to state 31
    '{'           shift, and go to state 20
    '}'           shift, and go to state 32

    compound_stmt  go to state 33
    if_prefix      go to state 34
    while_label    go to state 35
    stmt           go to state 36


State 24

   22 stmt: T_Identifier . '=' expr ';'
   23     | T_Identifier . '(' arg_list ')' ';'

    '='  shift, and go to state 37
    '('  shift, and go to state 38


State 25

   21 stmt: T_Int . var_list ';'

    T_Identifier  shift, and go to state 39

    var_list  go to state 40


State 26

   17 while_label: T_While .

    $default  reduce using rule 17 (while_label)


State 27

   16 if_prefix: T_If . '(' expr ')'

    '('  shift, and go to state 41


State 28

   20 stmt: T_Return . expr ';'

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 46


State 29

   30 stmt: T_Break . ';'

    ';'  shift, and go to state 47


State 30

   31 stmt: T_Continue . ';'

    ';'  shift, and go to state 48


State 31

   32 stmt: T_outputInt . '(' expr ')' ';'

    '('  shift, and go to state 49


State 32

   13 compound_stmt: '{' stmt_list '}' .

    $default  reduce using rule 13 (compound_stmt)


State 33

   24 stmt: compound_stmt .

    $default  reduce using rule 24 (stmt)


State 34

   25 stmt: if_prefix . stmt
   27     | if_prefix . stmt T_Else @3 stmt

    T_Identifier  shift, and go to state 24
    T_Int         shift, and go to state 25
    T_While       shift, and go to state 26
    T_If          shift, and go to state 27
    T_Return      shift, and go to state 28
    T_Break       shift, and go to state 29
    T_Continue    shift, and go to state 30
    T_outputInt   shift, and go to state 31
    '{'           shift, and go to state 20

    compound_stmt  go to state 33
    if_prefix      go to state 34
    while_label    go to state 35
    stmt           go to state 50


State 35

   29 stmt: while_label . '(' expr ')' @4 stmt

    '('  shift, and go to state 51


State 36

   14 stmt_list: stmt_list stmt .

    $default  reduce using rule 14 (stmt_list)


State 37

   22 stmt: T_Identifier '=' . expr ';'

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 52


State 38

   23 stmt: T_Identifier '(' . arg_list ')' ';'

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    $default  reduce using rule 35 (arg_list)

    arg_list  go to state 53
    expr      go to state 54


State 39

   19 var_list: T_Identifier .

    $default  reduce using rule 19 (var_list)


State 40

   18 var_list: var_list . ',' T_Identifier
   21 stmt: T_Int var_list . ';'

    ','  shift, and go to state 55
    ';'  shift, and go to state 56


State 41

   16 if_prefix: T_If '(' . expr ')'

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 57


State 42

   36 expr: T_IntConstant .

    $default  reduce using rule 36 (expr)


State 43

   37 expr: T_Identifier .
   38     | T_Identifier . '(' arg_list ')'

    '('  shift, and go to state 58

    $default  reduce using rule 37 (expr)


State 44

   39 expr: T_inputInt . '(' ')'

    '('  shift, and go to state 59


State 45

   53 expr: '(' . expr ')'

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 60


State 46

   20 stmt: T_Return expr . ';'
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Or     shift, and go to state 66
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    ';'      shift, and go to state 74


State 47

   30 stmt: T_Break ';' .

    $default  reduce using rule 30 (stmt)


State 48

   31 stmt: T_Continue ';' .

    $default  reduce using rule 31 (stmt)


State 49

   32 stmt: T_outputInt '(' . expr ')' ';'

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 75


State 50

   25 stmt: if_prefix stmt .
   27     | if_prefix stmt . T_Else @3 stmt

    T_Else  shift, and go to state 76

    $default  reduce using rule 25 (stmt)


State 51

   29 stmt: while_label '(' . expr ')' @4 stmt

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 77


State 52

   22 stmt: T_Identifier '=' expr . ';'
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Or     shift, and go to state 66
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    ';'      shift, and go to state 78


State 53

   23 stmt: T_Identifier '(' arg_list . ')' ';'
   33 arg_list: arg_list . ',' expr

    ')'  shift, and go to state 79
    ','  shift, and go to state 80


State 54

   34 arg_list: expr .
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Or     shift, and go to state 66
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 34 (arg_list)


State 55

   18 var_list: var_list ',' . T_Identifier

    T_Identifier  shift, and go to state 81


State 56

   21 stmt: T_Int var_list ';' .

    $default  reduce using rule 21 (stmt)


State 57

   16 if_prefix: T_If '(' expr . ')'
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Or     shift, and go to state 66
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    ')'      shift, and go to state 82


State 58

   38 expr: T_Identifier '(' . arg_list ')'

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    $default  reduce using rule 35 (arg_list)

    arg_list  go to state 83
    expr      go to state 54


State 59

   39 expr: T_inputInt '(' . ')'

    ')'  shift, and go to state 84


State 60

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr
   53     | '(' expr . ')'

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Or     shift, and go to state 66
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    ')'      shift, and go to state 85


State 61

   48 expr: expr T_Le . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 86


State 62

   49 expr: expr T_Ge . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 87


State 63

   44 expr: expr T_Eq . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 88


State 64

   45 expr: expr T_Ne . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 89


State 65

   51 expr: expr T_And . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 90


State 66

   50 expr: expr T_Or . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 91


State 67

   52 expr: expr T_Power . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 92


State 68

   46 expr: expr '<' . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 93


State 69

   47 expr: expr '>' . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 94


State 70

   40 expr: expr '+' . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 95


State 71

   41 expr: expr '-' . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 96


State 72

   42 expr: expr '*' . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 97


State 73

   43 expr: expr '/' . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 98


State 74

   20 stmt: T_Return expr ';' .

    $default  reduce using rule 20 (stmt)


State 75

   32 stmt: T_outputInt '(' expr . ')' ';'
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Or     shift, and go to state 66
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    ')'      shift, and go to state 99


State 76

   27 stmt: if_prefix stmt T_Else . @3 stmt

    $default  reduce using rule 26 (@3)

    @3  go to state 100


State 77

   29 stmt: while_label '(' expr . ')' @4 stmt
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Or     shift, and go to state 66
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    ')'      shift, and go to state 101


State 78

   22 stmt: T_Identifier '=' expr ';' .

    $default  reduce using rule 22 (stmt)


State 79

   23 stmt: T_Identifier '(' arg_list ')' . ';'

    ';'  shift, and go to state 102


State 80

   33 arg_list: arg_list ',' . expr

    T_IntConstant  shift, and go to state 42
    T_Identifier   shift, and go to state 43
    T_inputInt     shift, and go to state 44
    '('            shift, and go to state 45

    expr  go to state 103


State 81

   18 var_list: var_list ',' T_Identifier .

    $default  reduce using rule 18 (var_list)


State 82

   16 if_prefix: T_If '(' expr ')' .

    $default  reduce using rule 16 (if_prefix)


State 83

   33 arg_list: arg_list . ',' expr
   38 expr: T_Identifier '(' arg_list . ')'

    ')'  shift, and go to state 104
    ','  shift, and go to state 80


State 84

   39 expr: T_inputInt '(' ')' .

    $default  reduce using rule 39 (expr)


State 85

   53 expr: '(' expr ')' .

    $default  reduce using rule 53 (expr)


State 86

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   48     | expr T_Le expr .
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 48 (expr)


State 87

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   49     | expr T_Ge expr .
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 49 (expr)


State 88

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   44     | expr T_Eq expr .
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 44 (expr)


State 89

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   45     | expr T_Ne expr .
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 45 (expr)


State 90

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   51     | expr T_And expr .
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 51 (expr)


State 91

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   50     | expr T_Or expr .
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Le     shift, and go to state 61
    T_Ge     shift, and go to state 62
    T_Eq     shift, and go to state 63
    T_Ne     shift, and go to state 64
    T_And    shift, and go to state 65
    T_Power  shift, and go to state 67
    '<'      shift, and go to state 68
    '>'      shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 50 (expr)


State 92

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr
   52     | expr T_Power expr .

    $default  reduce using rule 52 (expr)


State 93

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   46     | expr '<' expr .
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 46 (expr)


State 94

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   47     | expr '>' expr .
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 47 (expr)


State 95

   40 expr: expr . '+' expr
   40     | expr '+' expr .
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 40 (expr)


State 96

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   41     | expr '-' expr .
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73

    $default  reduce using rule 41 (expr)


State 97

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   42     | expr '*' expr .
   43     | expr . '/' expr
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67

    $default  reduce using rule 42 (expr)


State 98

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   43     | expr '/' expr .
   44     | expr . T_Eq expr
   45     | expr . T_Ne expr
   46     | expr . '<' expr
   47     | expr . '>' expr
   48     | expr . T_Le expr
   49     | expr . T_Ge expr
   50     | expr . T_Or expr
   51     | expr . T_And expr
   52     | expr . T_Power expr

    T_Power  shift, and go to state 67

    $default  reduce using rule 43 (expr)


State 99

   32 stmt: T_outputInt '(' expr ')' . ';'

    ';'  shift, and go to state 105


State 100

   27 stmt: if_prefix stmt T_Else @3 . stmt

    T_Identifier  shift, and go to state 24
    T_Int         shift, and go to state 25
    T_While       shift, and go to state 26
    T_If          shift, and go to state 27
    T_Return      shift, and go to state 28
    T_Break       shift, and go to state 29
    T_Continue    shift, and go to state 30
    T_outputInt   shift, and go to state 31
    '{'           shift, and go to state 20

    compound_stmt  go to state 33
    if_prefix      go to state 34
    while_label    go to state 35
    stmt           go to state 106


State 101

   29 stmt: while_label '(' expr ')' . @4 stmt

    $default  reduce using rule 28 (@4)

    @4  go to state 107


State 102

   23 stmt: T_Identifier '(' arg_list ')' ';' .

    $default  reduce using rule 23 (stmt)


State 103
